# ferrum

./: .gitignore  Cargo.toml  FRAMEWORK_SUMMARY.md  LANGUAGE_VISION.md  README.md  TESTING_GUIDE.md  test_ferrum  test_ferrum.rs
_smoke_demo/: Cargo.toml
_smoke_demo/src/: main.frr
crates/ferrum-backend/: Cargo.toml
crates/ferrum-backend/src/: lib.rs
crates/ferrum-cli/: Cargo.toml
crates/ferrum-cli/src/: main.rs
crates/ferrum-core/: Cargo.toml
crates/ferrum-core/src/: component.rs  css.rs  formatter.rs  lib.rs  main.rs  parser.rs  parser_clean.rs  routing.rs  state.rs
crates/ferrum-dev-server/: Cargo.toml
crates/ferrum-dev-server/src/: main.rs
crates/ferrum-dev-server/static/: ferrum.css
crates/ferrum-frontend/: Cargo.toml
crates/ferrum-frontend/src/: lib.rs
crates/ferrum-shared/: Cargo.toml
crates/ferrum-shared/src/: lib.rs  main.rs
examples/: ultra_simple.frr
examples/counter/: Button.frr  Cargo.toml  Counter.frr  Data.frr  Form.frr  Layout.frr  README.frr  index.html
examples/counter/components/: Button.frr  Card.frr  Input.frr
examples/counter/src/: main.frr  main.rs
examples/simple-app/: app.frr
my-app/: Cargo.toml
my-app/src/: main.frr
test-app/: Cargo.toml  index.html
test-app/src/: main.frr
test-lang/: Cargo.toml
test-lang/src/: main.frr
ultra-simple/: Cargo.toml
ultra-simple/src/: app.frr  main.frr  main.rs
ultra-simple/src/components/: Button.frr
