[workspace]
resolver = "2"
members = [
    "crates/ferrum-core",
    "crates/ferrum-cli", 
    "crates/ferrum-frontend",
    "crates/ferrum-backend",
    "crates/ferrum-shared",
    "crates/ferrum-dev-server",
    # Examples can be built explicitly, but aren't required for workspace tests.
    # "examples/counter"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Ferrum Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ferrum-web/ferrum"
homepage = "https://ferrum.dev"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# Frontend dependencies
# Keep this workspace building on stable Rust by avoiding Leptos' `nightly` feature.
leptos = { version = "0.6", features = ["csr"] }
leptos_axum = { version = "0.6" }
leptos_meta = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
wasm-bindgen = "0.2"
console_log = "1.0"
log = "0.4"

# CLI dependencies
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"

# Shared dependencies
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"