[package]
name = "ultra-simple"
version = "0.1.0"
edition = "2021"

[dependencies]
ferrum-core = { git = "https://github.com/ferrum-web/ferrum" }
ferrum-frontend = { git = "https://github.com/ferrum-web/ferrum" }
leptos = "0.6"
leptos_meta = "0.6"
leptos_router = "0.6"
wasm-bindgen = "0.2"
console_log = "1.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.web-sys]
version = "0.3"
features = [
    "Document",
    "Element", 
    "HtmlElement",
    "Window",
    "console",
]
