[package]
name = "ferrum-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "ferrum"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
ferrum-core = { path = "../ferrum-core" }
ferrum-dev-server = { path = "../ferrum-dev-server" }