[package]
name = "ferrum-dev-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true, features = ["ws"] }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures-util = "0.3"
uuid = { workspace = true, features = ["v4", "serde"] }
notify = "6.1"
anyhow = { workspace = true }
ferrum-core = { path = "../ferrum-core" }
console_log = { workspace = true }
log = { workspace = true }